--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,13 @@ services:
   mysql:
     image: mysql:latest
     volumes:
-      - /var/lib/mysql
+      - db_data:/var/lib/mysql
+    restart: always
+    ports:
+      - "3306:3306"
     environment:
-      - MYSQL_DATABASE=project
-      - MYSQL_ROOT_PASSWORD=root
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: project
+      MYSQL_PASSWORD: password
+volumes:
+  db_data:
